Version 2.2.000
    TODO: Add Xbows/Tridents to salvage/repair
    TODO: Add unit test for combat XP values
    TODO: Add unit test to determine crossbow or bow skill
    TODO: Add unit test for trident xp processing
    TODO: Add missing entries to changelog
    Replaced 'Experience_Formula.Modifier' in experience.yml with 'Experience_Formula.Skill_Multiplier' which is easier to understand and less prone to divide by zero bugs
    (API) Many skills with RNG elements now send out a SubSkillEvent (which can be used to modify probability or cancel the results), some skills without RNG still send out this event when activated, this event is cancellable so it can be used to make a skill fail
    Treasure drop rate from Shake, Fishing, Hylian, and Excavation now benefit from the Luck perk
    Added 'Send_To_Console' settings to chat.yml to toggle sending party or admin chat messages to console
    Added a set of "mastery" subskills meant for end game progression
    Added the mastery subskill 'Mother Lode' to Mining
    Added the mastery subskill 'Clean Cuts' to Woodcutting
    Added the mastery subskill 'Verdant Bounty' to Herbalism
    All new skills have had settings added to advanced.yml
    Added /mmopower command (aliases /mmopowerlevel /powerlevel)
    Added 'mcmmo.commands.mmopower' permission node
    Added 'mcmmo.ability.herbalism.verdantbounty' permission node
    Added 'mcmmo.ability.mining.motherlode' permission node
    Added 'mcmmo.ability.woodcutting.cleancuts' permission node
    Added 'Mining.SubSkill.MotherLode.Name' to locale
    Added 'Mining.SubSkill.MotherLode.Stat' to locale
    Added 'Mining.SubSkill.MotherLode.Description' to locale
    Added 'Woodcutting.SubSkill.CleanCuts.Name' to locale
    Added 'Woodcutting.SubSkill.CleanCuts.Stat' to locale
    Added 'Woodcutting.SubSkill.CleanCuts.Description' to locale
    Added 'Herbalism.SubSkill.VerdantBounty.Name' to locale
    Added 'Herbalism.SubSkill.VerdantBounty.Stat' to locale