@@ -1,0 +1,6 @@
+package com.gmail.nossr50.util;
+
+public enum BowType {
+    BOW,
+    CROSSBOW
+}
